--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -8,6 +8,6 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/IMSWeb/target/classes"/>
-        <property name="context-root" value="MVC"/>
+        <property name="context-root" value="IMSWeb"/>
     </wb-module>
 </project-modules>
