--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -3,10 +3,11 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <dependent-module archiveName="IMS-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/IMS/IMS">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/IMSWeb/target/classes"/>
-        <property name="context-root" value="IMSWeb"/>
+        <property name="context-root" value="MVC"/>
     </wb-module>
 </project-modules>
